# causality

./: .cursorignore  .envrc  .gitignore  .ocamlformat  .rustfmt.toml  COMPONENTS.md  Cargo.nix  Cargo.toml  Cargo.toml.backup  README.md  clean_rust_build.sh  crate-hashes.json  deny.toml  dune  dune-project  flake.nix  implementation_complete.txt  implementation_summary.txt  ocaml_causality.opam  progress_summary.txt  shell.nix
crates/agent-user/: Cargo.toml  flake.nix
crates/agent-user/src/: main.rs
crates/causality-api/: Cargo.toml  README.md
crates/causality-api/src/: blockchain.rs  client.rs  config.rs  coprocessor.rs  error_handler.rs  gateway.rs  handlers.rs  lib.rs  main.rs  mock.rs  models.rs  optimization.rs  protocols.rs  serialization.rs  server.rs  session.rs  traits.rs  types.rs  valence_integration.rs
crates/causality-api/tests/: README.md  chain_client_test.rs  chain_utils.rs  client_integration_test.rs  client_test.rs  coprocessor_test.rs  cross_chain_test.rs  ethereum_token_transfer_test.rs  mock_client_tests.rs  transaction_query_tests.rs
crates/causality-boundary/: Cargo.toml
crates/causality-boundary/src/: annotation.rs  crossing.rs  lib.rs  metrics.rs  off_chain.rs  on_chain.rs
crates/causality-cli/: Cargo.toml  README.md
crates/causality-cli/examples/: intent_example.rs
crates/causality-cli/src/: error.rs  lib.rs  main.rs
crates/causality-cli/tests/: submit_command_test.rs
crates/causality-compiler/: Cargo.toml  README.md
crates/causality-compiler/src/: almanac_runtime.rs  almanac_schema.rs  analysis.rs  artifact.rs  ast.rs  benchmarks.rs  checker.rs  circuit.rs  constraint_solver.rs  enhanced_pipeline.rs  error.rs  error_handling.rs  event_storage.rs  generator.rs  generator_helpers.rs  ids.rs  ingest.rs  layer1_compiler.rs  layer2_compiler.rs  lib.rs  lifecycle.rs  main.rs  observability.rs  optimization.rs  pipeline.rs  program.rs  project.rs  proof_primitives.rs  query_primitives.rs  registry.rs  sexpr_spec_tests.rs  state_analysis.rs  storage_backend.rs  storage_integration_tests.rs  storage_layout.rs  teg_parser.rs  tests.rs  traverse_almanac_integration.rs  traverse_integration.rs  type_inference.rs  (+5 more)
crates/causality-compiler/tests/: integration_test.rs  phase2_e2e_test.rs  phase3_proof_generation_test.rs  real_system_integration_test.rs  sexpr_spec_validation.rs
crates/causality-controller/: Cargo.toml
crates/causality-controller/src/: main.rs
crates/causality-core/: Cargo.toml  README.md
crates/causality-core/src/: actor.rs  capability.rs  committee.rs  concurrency.rs  content_addressing.rs  core.rs  domain.rs  effects_utils.rs  error.rs  error_utils.rs  extension_traits.rs  graph_analysis.rs  graph_registry.rs  id_utils.rs  identity.rs  intent_utils.rs  lib.rs  lisp_adapter.rs  log.rs  message_utils.rs  nullifier_utils.rs  numeric_utils.rs  observation.rs  resource_types.rs  resource_utils_tests.rs  serialization.rs  sexpr_ffi.rs  sexpr_ffi_test.rs  sexpr_utils.rs  sexpr_utils_tests.rs  smt.rs  smt_collections.rs  teg_deployment.rs  teg_direct_write.rs  teg_persistence.rs  teg_proofs.rs  teg_state_root.rs  teg_zkp.rs  test_logging.rs  test_mocks.rs  (+7 more)
crates/causality-core/tests/: capability_test.rs  intent_test.rs  layer2_integration_test.rs  linearity_test.rs  linearity_traits_test.rs  machine_instructions.rs  object_test.rs  resource_minimal_test.rs  resource_module_test.rs  smt_integration.rs  type_constructors_test.rs
crates/causality-crypto/: Cargo.toml  README.md
crates/causality-db/: Cargo.toml  README.md
crates/causality-db-memory/: Cargo.toml
crates/causality-db-rocks/: Cargo.toml
crates/causality-domain/: Cargo.toml  README.md
crates/causality-domain-cosmwasm/: Cargo.toml
crates/causality-domain-ethereum/: Cargo.toml
crates/causality-domain-rust/: Cargo.toml
crates/causality-effects/: Cargo.toml
crates/causality-engine/: Cargo.toml
crates/causality-error/: Cargo.toml  README.md
crates/causality-ffi/: Cargo.toml  README.md  build.rs
crates/causality-indexer-adapter/: Cargo.toml  README.md
crates/causality-indexer-almanac-client/: Cargo.toml  README.md
crates/causality-indexer-bridge/: Cargo.toml  README.md
crates/causality-indexer-client/: Cargo.toml  README.md
crates/causality-ir/: Cargo.toml
crates/causality-lisp/: Cargo.toml  README.md
e2e/: Cargo.toml  README.md
e2e/cli/: Cargo.toml  README.md  proof.zk  test-results.json  test-results.md  test.lisp  test.zk  witness.json
e2e/comprehensive_compilation_workflow/: README.md  comprehensive_compilation_workflow_e2e.rs
e2e/core_integration/: README.md  core_integration_e2e.rs
e2e/ocaml_harness/: README.md  bridge_vault_e2e.ml  bridge_vault_scenario.lisp  bridge_vault_scenario.ml
e2e/simple_simulation/: README.md  simple_simulation_test.rs
e2e/simulation_zk_integration/: README.md  simulation_zk_integration_e2e.rs
e2e/tests/: bridge_e2e_test.rs  comprehensive_compilation_workflow_e2e.rs  core_integration_e2e.rs  ocaml_interop_ffi_e2e.rs  simple_simulation_test.rs  simulation_zk_integration_e2e.rs
e2e/type_system_consistency/: README.md  type_system_consistency_e2e.rs
ml_causality/: .ocamlformat  README.md  dune  dune-project  ml_causality.opam
ml_causality/generated_lisp/: capability_system.lisp
ml_causality/lib/: dune
ml_causality/test/: dune  simple_test.ml  test_bridge_extended.ml  test_bridge_workflow.ml  test_dsl.ml  test_effect_system.ml  test_interop.ml  test_legacy_optimization.ml  test_lisp_ast.ml  test_phase6_enhancements.ml  test_sexpr.ml  test_ssz_integration.ml  transpiler_test.ml
session/: Cargo.toml  README.md
session/docs/: README.md  api-reference.md  architecture.md  compilation.md  data-flow.md  examples.md  getting-started.md  implementation-summary.md  layer-interactions.md  theory.md
session/examples/: atomic_swap.rs  capability_demo.rs  choreography_demo.rs  effect_transform.rs  hello_world.rs  payment.rs  safe_deposit_demo.rs
session/src/: interpreter.rs  ir.rs  lib.rs
session/tests/: error_propagation.rs  integration.rs  multi_party_escrow.rs  property.rs
src/: zk.rs  (+29 more)
(+2608 files in other folders)
