[workspace]
resolver = "2"
members = [
    "crates/causality-engine",
    "crates/causality-types",
    "crates/causality-patterns",
    "crates/causality-tel",
    "crates/causality-domain",
    "crates/causality-error",
    "crates/causality-core",
    "crates/causality-boundary",
    "crates/causality-tools",
    "crates/causality-crypto",
    "crates/causality-db",
    "crates/causality-storage",
    "crates/causality-simulation",
    "crates/agent-user",
    "crates/agent-committee",
    "tests/test-effect",
    "tests/test-scenario",
    "domains/causality-domain-sdk",
    "domains/causality-domain-succinct",
    "domains/causality-domain-cosmwasm",
    "domains/causality-domain-evm",
]

[workspace.metadata.examples]
verification_system = { path = "examples/verification_system", enabled = false, reason = "Deprecated" }
cross_domain_verification = { path = "examples/cross_domain_verification", enabled = false, reason = "Temporarily disabled" }

[workspace.dependencies]
# Workspace dependencies are listed here.
# Crates in the workspace can reference these dependencies with { workspace = true }
aix = "0.5.2"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
blake3 = "1.5"
borsh = { version = "1", features = ["derive", "std"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
console = "0.15"
dbus = "0.9"
environ = "0.5"
errno = "0.3"
fs-err = "2.11"
fs-extra = "1.3"
futures = "0.3"
git2 = { version = "0.18", default-features = false }
hex = "0.4"
hmac = "0.12"
home = "0.5"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
iana-time-zone = "0.1"
bincode = "1.3"
rand = "0.8"
reqwest = { version = "0.12.15", features = ["json"] }
rocksdb = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.7.8"
tracing = "0.1"
windows-sys = "0.59.0"
zerocopy = "0.8.24"
# Dependencies causing conflicts
winreg = "0.55"
native-tls = "0.2.14"
wasi = "0.14.2+wasi-0.2.4"

# Internal dependencies
causality-core = { path = "crates/causality-core" }
causality-crypto = { path = "crates/causality-crypto" }
causality-db = { path = "crates/causality-db" }
causality-domain = { path = "crates/causality-domain" }
causality-domain-cosmwasm = { path = "domains/causality-domain-cosmwasm" }
causality-domain-evm = { path = "domains/causality-domain-evm" }
causality-domain-sdk = { path = "domains/causality-domain-sdk" }
causality-domain-succinct = { path = "domains/causality-domain-succinct" }
causality-engine = { path = "crates/causality-engine" }
causality-error = { path = "crates/causality-error" }
causality-storage = { path = "crates/causality-storage" }
causality-tel = { path = "crates/causality-tel" }
causality-types = { path = "crates/causality-types" }

# This section is used by cargo-workspaces
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/timewave-computer/causality"
repository = "https://github.com/timewave-computer/causality"