[workspace]
resolver = "2"
members = [
    "crates/causality-codegen-core",
    "crates/causality-core",
    "crates/causality-crypto",
    "crates/causality-db",
    "crates/causality-domain-cosmwasm",
    "crates/causality-domain-ethereum",
    "domains/causality-domain-sdk",
    "domains/causality-domain-succinct",
    "crates/causality-domain-rust",
    "crates/causality-error",
    "crates/causality-indexer-adapter",
    "crates/causality-indexer-almanac-client",
    "crates/causality-indexer-bridge", 
    "crates/causality-indexer-client",
    "crates/causality-ir",
    "crates/causality-patterns",
    "crates/causality-runtime",
    "crates/causality-simulation",
    "crates/causality-storage",
    "crates/causality-storage-mem",
    "crates/causality-storage-postgres",
    "crates/causality-storage-rocksdb",
    "crates/causality-tel",
    "crates/causality-tools",
    "crates/causality-types",
    "tests/test-effect",
    "tests/test-scenario",
]

[workspace.dependencies]
# Workspace dependencies are listed here.
# Crates in the workspace can reference these dependencies with { workspace = true }
aix = "0.5.2"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
blake3 = "1.5"
borsh = { version = "1", features = ["derive", "std"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
console = "0.15"
dbus = "0.9"
environ = "0.5"
errno = "0.3"
fs-err = "2.11"
fs-extra = "1.3"
futures = "0.3"
git2 = { version = "0.18", default-features = false }
hex = "0.4"
hmac = "0.12"
home = "0.5"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
iana-time-zone = "0.1"
bincode = "1.3"
rand = "0.8"
reqwest = { version = "0.12.15", features = ["json"] }
rocksdb = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.7.8"
tracing = "0.1"
windows-sys = "0.59.0"
zerocopy = "0.8.24"
# Dependencies causing conflicts
winreg = "0.55"
native-tls = "0.2.14"
wasi = "0.14.2+wasi-0.2.4"

# Internal dependencies
causality-core = { path = "crates/causality-core" }
causality-crypto = { path = "crates/causality-crypto" }
causality-db = { path = "crates/causality-db" }
causality-domain = { path = "crates/causality-domain" }
causality-domain-cosmwasm = { path = "crates/causality-domain-cosmwasm" }
causality-domain-ethereum = { path = "crates/causality-domain-ethereum" }
causality-domain-sdk = { path = "domains/causality-domain-sdk" }
causality-domain-succinct = { path = "domains/causality-domain-succinct" }
causality-runtime = { path = "crates/causality-runtime" }
causality-error = { path = "crates/causality-error" }
causality-ir = { path = "crates/causality-ir" }
causality-storage = { path = "crates/causality-storage" }
causality-tel = { path = "crates/causality-tel" }
causality-types = { path = "crates/causality-types" }
causality-tools = { path = "crates/causality-tools" }

# This section is used by cargo-workspaces
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/timewave-computer/causality"
repository = "https://github.com/timewave-computer/causality"
