# Purpose: End-to-end tests for the Causality framework.
[package]
name = "causality-e2e-tests"
version = "0.1.0"
edition = "2021"
publish = false # This is a test crate, not meant to be published

[dependencies]
# Core causality crates
causality-core = { path = "../crates/causality-core" }
causality-compiler = { path = "../crates/causality-compiler" }
causality-lisp = { path = "../crates/causality-lisp" }
causality-runtime = { path = "../crates/causality-runtime" }
causality-zk = { path = "../crates/causality-zk" }
causality-api = { path = "../crates/causality-api" }
causality-cli = { path = "../crates/causality-cli" }
causality-toolkit = { path = "../crates/causality-toolkit" }
causality-simulation = { path = "../crates/causality-simulation" }
# causality-ffi = { path = "../crates/causality-ffi" }  # Temporarily disabled due to compatibility issues

# Testing and async
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }

# Additional dependencies
log = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
env_logger = "0.10"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[[test]]
name = "comprehensive_compilation_workflow_e2e"
path = "comprehensive_compilation_workflow/comprehensive_compilation_workflow_e2e.rs"

[[test]]
name = "simulation_zk_integration_e2e"
path = "simulation_zk_integration/simulation_zk_integration_e2e.rs"

[[test]]
name = "core_integration_e2e"
path = "core_integration/core_integration_e2e.rs"

[[test]]
name = "type_system_consistency_e2e"
path = "type_system_consistency/type_system_consistency_e2e.rs"

[[test]]
name = "simple_simulation_test"
path = "simple_simulation/simple_simulation_test.rs"

# [[test]]
# name = "ocaml_interop_ffi_e2e"
# path = "tests/ocaml_interop_ffi_e2e.rs"  # Temporarily disabled due to FFI compatibility issues
