[package]
name = "session"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]

[lints]
workspace = true

[[example]]
name = "effect_transform"
path = "examples/effect_transform.rs"
