[package]
name = "agent-user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: Add dependencies as needed (e.g., causality-core, tokio, tracing, clap)
clap = { workspace = true, features = ["derive"] }
