[package]
name = "causality-api"
version = "0.1.0"
edition = "2021"
authors = ["Timewave Team <thetimewaves@proton.me>"]
license = "Apache-2.0"
repository = "https://github.com/timewave-lab/micro-causality"
description = "API interface management and domain mocking for Causality"

[dependencies]
# Core causality dependencies
causality-core = { path = "../causality-core" }
causality-runtime = { path = "../causality-runtime" }
causality-compiler = { path = "../causality-compiler" }
causality-toolkit = { path = "../causality-toolkit" }

# Core async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client/server
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
colored = { version = "2.0" }
base64 = { version = "0.21" }

# Standard Rust crates
async-trait = { workspace = true }
log = { workspace = true }

# Blockchain client library
valence-domain-clients = { git = "https://github.com/timewave-computer/valence-domain-clients", rev = "d26460ceb0f95599300b1521131ef4b078638310", default-features = false, features = ["ethereum", "neutron"] }
valence-core = { git = "https://github.com/timewave-computer/valence-domain-clients", rev = "d26460ceb0f95599300b1521131ef4b078638310" }
valence-evm = { git = "https://github.com/timewave-computer/valence-domain-clients", rev = "d26460ceb0f95599300b1521131ef4b078638310" }
valence-cosmos = { git = "https://github.com/timewave-computer/valence-domain-clients", rev = "d26460ceb0f95599300b1521131ef4b078638310" }
valence-coprocessor-client = { git = "https://github.com/timewave-computer/valence-domain-clients", rev = "d26460ceb0f95599300b1521131ef4b078638310" }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros", "test-util"] }

[lib]
crate-type = ["lib"]

[features]
default = []
ethereum = []
neutron = []
ffi = []
ocaml = ["ffi"]