[package]
name = "causality-api"
version = "0.1.0"
edition = "2021"
authors = ["Timewave Team <thetimewaves@proton.me>"]
license = "Apache-2.0"
repository = "https://github.com/timewave-lab/micro-causality"
description = "API interface management for Causality's unified 5-instruction machine"

[dependencies]
# Core causality dependencies - using new unified system
causality-core = { path = "../causality-core" }
causality-compiler = { path = "../causality-compiler" }
causality-runtime = { path = "../causality-runtime" }
causality-lisp = { path = "../causality-lisp" }
causality-simulation = { path = "../causality-simulation" }

# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client/server
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = { workspace = true }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
base64 = "0.21"
hex = "0.4"
rand = { workspace = true }

# Standard Rust crates
async-trait = { workspace = true }
log = { workspace = true }

# Additional dependencies
env_logger = "0.10"

# For HTTP server functionality
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1.0"

# For configuration
config = "0.14"
toml = "0.8"

# For session management
jsonwebtoken = "9.0"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros", "test-util"] }

[lib]
crate-type = ["lib"]

[features]
default = []
simulation = []
zk = []