[package]
name = "causality-boundary"
version = "0.1.0"
edition = "2021"
description = "Causality - Boundary system"
license = "MIT OR Apache-2.0"

[dependencies]
# External dependencies
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Internal dependencies
causality-types = { workspace = true }
causality-core = { workspace = true }

# DEPRECATED: Dependencies on legacy crates have been removed
# All functionality is now available through causality-core
# causality-resource = { workspace = true }
