[package]
name = "causality-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
causality-core = { path = "../causality-core" }
causality-compiler = { path = "../causality-compiler" }
causality-runtime = { path = "../causality-runtime" }
causality-toolkit = { path = "../causality-toolkit" }
anyhow = { workspace = true }
clap = { version = "4.3", features = ["derive"] }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
async-trait = { workspace = true }
indicatif = "0.16.2"
tokio = { workspace = true, features = ["full", "macros"] }
chrono = { workspace = true, version = "0.4", features = ["serde"] }
colored = "2.1.0"
hex = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, version = "1.0" }
url = "2.4.1"
rand = { workspace = true }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "causality"
path = "src/main.rs"
