[package]
name = "causality-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
causality-core = { path = "../causality-core" }
causality-lisp = { path = "../causality-lisp" }
causality-compiler = { path = "../causality-compiler" }
causality-runtime = { path = "../causality-runtime" }
causality-simulation = { path = "../causality-simulation" }
causality-toolkit = { path = "../causality-toolkit" }
causality-zk = { path = "../causality-zk" }
causality-api = { path = "../causality-api" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
async-trait = { workspace = true }
indicatif = "0.16.2"
tokio = { version = "1", features = ["full"] }
chrono = { workspace = true, features = ["serde"] }
colored = "2.1.0"
log = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4.1"
rand = { workspace = true }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
bincode = "1.3.3"

[[bin]]
name = "causality"
path = "src/main.rs"

[dev-dependencies]
