[package]
name = "causality-compiler"
version = "0.1.0"
edition = "2021"
description = "Causality multi-layer compiler with optimization engine"

[lib]
name = "causality_compiler"
crate-type = ["rlib", "cdylib"]

[dependencies]
causality-core = { path = "../causality-core" }
causality-lisp = { path = "../causality-lisp" }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hashbrown = "0.15"
rustc-hash = "1.1"

[features]
default = []
ffi = []

[dev-dependencies]
# Test dependencies will be added as needed 
tempfile = "3.0" 