[package]
name = "causality-compiler"
version = "0.1.0"
edition = "2021"
description = "Causality multi-layer compiler with optimization engine"

[lib]
name = "causality_compiler"
crate-type = ["rlib", "cdylib"]

[dependencies]
causality-core = { path = "../causality-core" }
causality-lisp = { path = "../causality-lisp" }
causality-zk = { path = "../causality-zk" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hashbrown = "0.15"
rustc-hash = "1.1"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

# Traverse integration dependencies (optional)
traverse-core = { path = "../../../traverse/crates/traverse-core", optional = true }

# Almanac integration dependencies (optional - commented out due to dependency conflicts)
# indexer-core = { git = "https://github.com/timewave-computer/almanac.git", optional = true }
# indexer-storage = { git = "https://github.com/timewave-computer/almanac.git", optional = true }
# indexer-api = { git = "https://github.com/timewave-computer/almanac.git", optional = true }

[features]
default = []
ffi = []
almanac = []
traverse = ["traverse-core"]
# almanac = ["indexer-core", "indexer-storage", "indexer-api", "indexer-query"]

[dev-dependencies]
# Test dependencies will be added as needed 
tempfile = "3.0" 