[package]
name = "causality-core"
version = "0.1.0"
edition = "2021"
description = "Core implementation of the causality platform"
license = "Apache-2.0"

# Internal dependencies
[dependencies]
causality-types = { path = "../causality-types" }
causality-crypto = { path = "../causality-crypto" }
causality-error = { path = "../causality-error" }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { workspace = true }
bincode = "1.3"
toml = "0.7.8"

# Async
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.25", features = ["full"] }

# Crypto (use implementations from causality-types and causality-crypto instead)
rand = "0.8"
blake3 = "1.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
tracing = "0.1"
lazy_static = "1.4"
regex = "1.7"
hex = "0.4"

[features]
default = [] 