[package]
name = "causality-crypto"
version = "0.1.0"
edition = "2021"
description = "Causality - Cryptographic primitives"
license = "MIT OR Apache-2.0"

[dependencies]
# External dependencies
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
borsh = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
blake3 = "1.3"

# Internal dependencies
causality-types = { workspace = true }
