[package]
name = "causality-crypto"
version = "0.1.0"
edition = "2021"
description = "Causality - Cryptographic primitives"
license = "MIT OR Apache-2.0"

[dependencies]
# External dependencies
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
borsh = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
blake3 = "1.5"
sparse-merkle-tree = "0.6"
chrono = { workspace = true }
lazy_static = "1.4.0"

# Internal dependencies
causality-types = { workspace = true }

[features]
default = []
poseidon = []
ed25519 = []
ecdsa = []
bls = []
md5 = []
groth16 = []
plonk = []
