[package]
name = "causality-domain"
version = "0.1.0"
edition = "2021"
description = "Causality - Domain system"
license = "MIT OR Apache-2.0"

[dependencies]
# External dependencies
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Internal dependencies
causality-types = { workspace = true }
causality-core = { workspace = true }
causality-resource = { workspace = true }
causality-effects = { workspace = true }
